# training-recommendation-agent

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
static/: form_config.js  index.html
training_recommend/: agent.py  collection_order.py  config.py  prompts.py
training_recommend/tools/: __init__.py  gear.py  venues.py  weather.py
